# polyakov_mikhail_home_work_19.2

./: .env.sample  .gitignore  README.md  groups.json  pyproject.toml  services.py
Product/: admin.py  forms.py  models.py  urls.py  views.py
Product/management/commands/: fill.py
Product/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py  0004_version.py  0005_product_owner.py  0006_alter_product_options.py  0007_product_s_published.py  0008_rename_s_published_product_is_published.py  0009_alter_product_options.py
Product/templates/: base.html  product_detail.html  products_list.html
Product/templates/Product/: base.html  category_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
Product/templates/includes/: inc_menu.html
Product/templatetags/: my_tags.py
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_count_views.py  0003_alter_blog_count_views.py  0004_blog_owner.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  (+1 more)
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_delete_blog.py
catalog/templates/: contacts.html  home.html  unit.html
config/: settings.py  urls.py
fixtures/: Product.json
start/: models.py  urls.py  views.py
start/migrations/: 0001_initial.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
(+12 files in other folders)
