[tool.poetry]
name = "home-work-19-2"
version = "0.1.0"
description = ""
authors = ["Mikhail Polyakov <timadgi@gmail.com>"]
readme = "README.md"
packages = [{include = "home_work_19"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
